--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,10 @@ body {
   font-family: Unica One, sans-serif;
 }
 
+.hidden {
+  display: none;
+}
+
 .backstretch {
   left: 0px; 
   top: 0px; 
@@ -14,7 +18,7 @@ body {
   width: 100%;
 }
 
-#backstretch {
+#splash-background {
   background: url(../images/earth.jpeg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -22,67 +26,52 @@ body {
   background-size: cover;
 }
 
-.login-solid {
-  
-  border-radius: 20px;
+.bar-opaque {
+  position:absolute;
   opacity: 1;
-  height: 450px;
-  width: 300px;
   z-index: 100;
-  position:absolute;
-  top:40%;
-  left:86%;
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
+  width: 175px;
+  top:05%;
+  left:79%;
 }
 
-
-#teal {
+.sidebar {
   position: absolute;
+  width: 170px;
+  top:0%;
+  left:80%;
+}
+
+#bar1 {
   background-color: #a5adb0;
-  opacity: .2;
-  width: 150px;
+  opacity: 0.2;
   z-index: 91;
-  position:absolute;
-  top:0%;
-  left:92.25%;
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
 }
 
-#teal1 {
-  position: absolute;
+#bar2 {
   background-color: black;
-  opacity: .05;
-  width: 150px;
+  opacity: 0.05;
   z-index: 92;
-  position:absolute;
-  top:0%;
-  left:92.25%;
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
 }
 
-.login {
+.bar-title {
   text-align: right;
-  color: #eaeaea;
-  font-weight: 100px;
+  color: #EAEAEA;
   font-size: 58px;
   line-height: 90%;
 }
 
-.links {
-  text-align: right;
-  /*color: #00b3b3;*/
+.links > a {
+  float: right;
+  text-decoration: none;
   color: #009999;
-  /*color: teal;*/
-  font-weight: 100px;
-  font-size: 34px;
+  font-size: 42px;
   line-height: 120%;
+  margin-top: 10px;
 }
+
+
+
 
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@@ -101,66 +90,29 @@ body {
   -webkit-animation-duration:1s;
   -moz-animation-duration:1s;
   animation-duration:1s;
+}
 
+#fade-in1 {
   -webkit-animation-delay: 1s;
   -moz-animation-delay:1s;
   animation-delay: 1s;
 }
   
-.fade-in2 {
-  opacity:0;
-  -webkit-animation:fadeIn ease-in 1;
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
- 
-  -webkit-animation-fill-mode:forwards;
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
- 
-  -webkit-animation-duration:1s;
-  -moz-animation-duration:1s;
-  animation-duration:1s;
-
+#fade-in2 {
   -webkit-animation-delay: 1.5s;
   -moz-animation-delay:1.5s;
   animation-delay: 1.5s;
 }
   
-.fade-in3 {
-  opacity:0;
-  -webkit-animation:fadeIn ease-in 1;
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
- 
-  -webkit-animation-fill-mode:forwards;
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
- 
-  -webkit-animation-duration:1.5s;
-  -moz-animation-duration:1.5s;
-  animation-duration:1.5s;
-
-  -webkit-animation-delay: 2.25s;
-  -moz-animation-delay:2.25s;
-  animation-delay: 2.25s;
+#fade-in3 {
+  -webkit-animation-delay: 2.1s;
+  -moz-animation-delay:2.1s;
+  animation-delay: 2.1s;
 }
   
-.fade-in4 {
-  opacity:0;
-  -webkit-animation:fadeIn ease-in 1;
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
- 
-  -webkit-animation-fill-mode:forwards;
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
- 
-  -webkit-animation-duration:1.5s;
-  -moz-animation-duration:1.5s;
-  animation-duration:1.5s;
-
-  -webkit-animation-delay: 3s;
-  -moz-animation-delay:3s;
-  animation-delay: 3s;
+#fade-in4 {
+  -webkit-animation-delay: 2.75s;
+  -moz-animation-delay:2.75s;
+  animation-delay: 2.75s;
 }
  
