--- a/css/custom.css
+++ b/css/custom.css
@@ -7,9 +7,9 @@ body {
 }
 
 .backstretch {
+  background: url(../images/earth.jpeg) no-repeat center center fixed; 
   left: 0px; 
   top: 0px; 
-  z-index: -999999; 
   margin: 0px; 
   padding: 0px;
   position: fixed; 
@@ -18,8 +18,46 @@ body {
   width: 100%;
 }
 
+
+  div.lightdiv {
+    height: 100%;
+    width: 83.9%;
+    z-index: 999999;
+    /*border-radius: 15px;*/
+    background-color: #201f2a;
+    opacity: .1;
+    padding: 60px;
+    color: #eaeaea;
+    display: block;
+  }
+
+  .featherlight .featherlight-close-icon{
+    position:absolute;
+    top:35px;
+    margin-left: 74%;
+    line-height:25px;
+    width:25px;
+    cursor:pointer;
+    text-align:center;
+    font-family:Arial,sans-serif;
+    background:#fff;
+    background:rgba(255,255,255,.3);
+    color:#000
+  }
+
+.head {
+  height: 300px;
+  border-radius: 30px ;
+  float: left;
+  margin: 10px 30px 30px 30px;
+}
+
+div#about {
+  font-size: 50px;
+}
+
 #splash-background {
-  background: url(../images/earth.jpeg) no-repeat center center fixed; 
+  z-index: -999999;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -28,8 +66,8 @@ body {
 
 .bar-opaque {
   position:absolute;
+  z-index: 1005;
   opacity: 1;
-  z-index: 100;
   width: 175px;
   top:05%;
   left:79%;
@@ -37,6 +75,7 @@ body {
 
 .sidebar {
   position: absolute;
+  z-index: 1004;
   width: 170px;
   top:0%;
   left:80%;
@@ -45,13 +84,11 @@ body {
 #bar1 {
   background-color: #a5adb0;
   opacity: 0.2;
-  z-index: 91;
 }
 
 #bar2 {
   background-color: black;
   opacity: 0.05;
-  z-index: 92;
 }
 
 .bar-title {
