--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,18 @@ body {
   font-family: Unica One, sans-serif;
 }
 
+a, a:visited {
+  text-decoration: none;
+  color: #1E9E9E;
+}
+
+a:hover {
+  color: #11a98c;
+}
+
+
+
+
 .hidden {
   display: none;
 }
@@ -29,6 +41,7 @@ body {
     padding: 60px;
     color: #eaeaea;
     display: block;
+    font-size: 30px;
   }
 
   .featherlight .featherlight-close-icon{
@@ -50,9 +63,20 @@ body {
   border-radius: 30px ;
   float: left;
   margin: 10px 30px 30px 30px;
+  opacity: .8;
 }
 
 div#about {
+  /*font-size: 50px;*/
+}
+div#cont {
+  text-align: center;
+}
+div#code {
+  text-align: center;
+}
+
+div.title {
   font-size: 50px;
 }
 
