--- a/css/animate.css
+++ b/css/animate.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+/*/*@charset "UTF-8";
 
 /*!
  * animate.css -http://daneden.me/animate
@@ -3339,3 +3339,4 @@
   -webkit-animation-name: slideOutUp;
   animation-name: slideOutUp;
 }
+*/*/
