--- a/css/custom.css
+++ b/css/custom.css
@@ -17,10 +17,44 @@ a:hover {
 
 .backstretch {
   background: url(../images/earth.jpeg) no-repeat center center fixed; 
-  margin: 0px; 
-  padding: 0px;
   position: fixed; 
   overflow: hidden; 
   height: 100%; 
   width: 100%;
+  z-index: -999999;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.inner {
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+  position: fixed; 
+}
+
+.sidebar {
+  float: right;
+  background-color: green;
+  width: 200px;
+  height: 100%;
+  z-index: 1;
+  margin-right: 8%;
+}
+
+.sb-opaque {
+  /*background-color: red;*/
+  width: 100%;
+  height: 100%;
+ 
+}
+
+.sb-trans {
+  float: right;
+  background-color: blue;
+  width: 100%;
+  height: 100%;
+
 }
