--- a/css/custom.css
+++ b/css/custom.css
@@ -37,24 +37,21 @@ a:hover {
 
 .sidebar {
   float: right;
-  background-color: green;
+  /*background-color: green;*/
   width: 200px;
-  height: 100%;
   z-index: 1;
+  height: 100%;
   margin-right: 8%;
 }
 
-.sb-opaque {
+#sb-opaque {
   /*background-color: red;*/
   width: 100%;
   height: 100%;
- 
 }
 
-.sb-trans {
-  float: right;
+#sb-trans {
   background-color: blue;
   width: 100%;
-  height: 100%;
 
 }
