--- a/css/custom.css
+++ b/css/custom.css
@@ -37,21 +37,22 @@ a:hover {
 
 .sidebar {
   float: right;
-  /*background-color: green;*/
+  color: white;
   width: 200px;
-  z-index: 1;
+  z-index: -1;
   height: 100%;
   margin-right: 8%;
 }
 
 #sb-opaque {
-  /*background-color: red;*/
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 
 #sb-trans {
-  background-color: blue;
+  background-color: #0B0E1C;
+  opacity: .45;
   width: 100%;
-
+  z-index: 0;
 }
