--- a/css/custom.css
+++ b/css/custom.css
@@ -11,10 +11,6 @@ a:hover {
   color: #11a98c;
 }
 
-.hidden {
-  display: none;
-}
-
 .backstretch {
   background: url(../images/earth.jpeg) no-repeat center center fixed; 
   position: fixed; 
@@ -33,26 +29,46 @@ a:hover {
   width: 100%;
   z-index: 0;
   position: fixed; 
+  z-index: -900;
 }
 
-.sidebar {
+
+@keyframes slide-down {
+    from {height: 0%;
+          opacity: .1;}
+    to {height: 200%;
+        opacity: .2;}
+}
+
+#sidebar {
   float: right;
   color: white;
+  text-align: right;
   width: 200px;
-  z-index: -1;
   height: 100%;
   margin-right: 8%;
-}
-
-#sb-opaque {
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+  opacity: 1;
+  z-index: 101;
 }
 
 #sb-trans {
-  background-color: #0B0E1C;
-  opacity: .45;
+  position: relative;
+  left: 0px;
+  top: -500px;
+  background-color: #eaeaea;
   width: 100%;
-  z-index: 0;
+  z-index: 100;
+  animation-name: slide-down;
+  animation-delay:0.8s;
+  animation-duration: 5s;
+  animation-fill-mode: forwards
+}
+
+#title {
+  font-size: 80px;
+}
+
+.links {
+  font-size: 50px;
+  line-height: 150%;
 }
