animation and z-index

--- a/css/custom.css
+++ b/css/custom.css
@@ -35,9 +35,11 @@ a:hover {
 
 @keyframes slide-down {
     from {height: 0%;
-          opacity: .1;}
+          opacity: .1;
+          z-index: 100;}
     to {height: 200%;
-        opacity: .2;}
+        opacity: .08;
+        z-index: -900;}
 }
 
 #sidebar {
@@ -57,7 +59,6 @@ a:hover {
   top: -500px;
   background-color: #eaeaea;
   width: 100%;
-  z-index: 100;
   animation-name: slide-down;
   animation-delay:0.8s;
   animation-duration: 5s;
@@ -65,26 +66,17 @@ a:hover {
 }
 
 #title {
-  font-size: 80px;
+  font-size: 54px;
+  line-height: 80%;
+  margin-right: 15px;
+  margin-top: 15px;
 }
 
 .links {
-  font-size: 50px;
-  line-height: 150%;
-}
-
-.bar-title {
-  text-align: right;
-  color: #EAEAEA;
-  font-size: 58px;
-  line-height: 90%;
-}
-
-.links > a {
   float: right;
   text-decoration: none;
   color: #009999;
-  font-size: 42px;
+  font-size: 36px;
   line-height: 120%;
-  margin-top: 10px;
+  margin: 10px 15px;
 }
