--- a/css/custom.css
+++ b/css/custom.css
@@ -42,6 +42,11 @@ a:hover {
         z-index: -900;}
 }
 
+@keyframes fade-in {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
 #sidebar {
   float: right;
   color: #EAEAEA;
@@ -60,23 +65,63 @@ a:hover {
   background-color: #eaeaea;
   width: 100%;
   animation-name: slide-down;
-  animation-delay:0.8s;
+  animation-delay:0.25s;
   animation-duration: 5s;
-  animation-fill-mode: forwards
+  animation-fill-mode: forwards;
 }
 
 #title {
-  font-size: 54px;
+  opacity: 0;
+  font-size: 58px;
   line-height: 80%;
   margin-right: 15px;
-  margin-top: 15px;
+  margin-top: 20px;
+  animation-name: fade-in;
+  animation-delay: 1.55s;
+  animation-duration: 1.8s;
+  animation-fill-mode: forwards;
+}
+
+#about {
+  opacity: 0;
+  animation-name: fade-in;
+  animation-delay: 2.05s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+
+#code {
+  opacity: 0;
+  animation-name: fade-in;
+  animation-delay: 2.55s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+
+#contact {
+  opacity: 0;
+  animation-name: fade-in;
+  animation-delay: 3.05s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
 }
 
 .links {
   float: right;
   text-decoration: none;
   color: #009999;
-  font-size: 36px;
+  font-size: 40px;
   line-height: 120%;
   margin: 10px 15px;
+}
+
+div.panel {
+  display: none;
+  height: 100%;
+  width: 80%;
+  z-index: 999999;
+  background-color: #201f2a;
+  color: #eaeaea;
+  /*display: block;*/
+  font-size: 30px;
 }
