--- a/css/custom.css
+++ b/css/custom.css
@@ -127,7 +127,7 @@ a:hover {
 }
 
 div.panel {
-  opacity: 0;
+  display: none;
   height: 100%;
   width: 80%;
   z-index: 999999;
@@ -137,6 +137,13 @@ div.panel {
 }
 
 /* animate.css */
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
 
 @-webkit-keyframes fadeInUpBig {
   from {
