clean up opacity and animation

--- a/css/animate.css
+++ b/css/animate.css
@@ -1348,7 +1348,7 @@
   }
 
   to {
-    opacity: 1;
+    opacity: .85;
     -webkit-transform: none;
     transform: none;
   }
@@ -1362,7 +1362,7 @@
   }
 
   to {
-    opacity: 1;
+    opacity: .85;
     -webkit-transform: none;
     transform: none;
   }
@@ -1480,7 +1480,7 @@
   }
 
   to {
-    opacity: 1;
+    opacity: .85;
     -webkit-transform: none;
     transform: none;
   }
@@ -1494,7 +1494,7 @@
   }
 
   to {
-    opacity: 1;
+    opacity: .85;
     -webkit-transform: none;
     transform: none;
   }
@@ -1507,7 +1507,7 @@
 
 @-webkit-keyframes fadeOut {
   from {
-    opacity: 1;
+    opacity: .85;
   }
 
   to {
@@ -1517,7 +1517,7 @@
 
 @keyframes fadeOut {
   from {
-    opacity: 1;
+    opacity: .85;
   }
 
   to {
@@ -1532,7 +1532,7 @@
 
 @-webkit-keyframes fadeOutDown {
   from {
-    opacity: 1;
+    opacity: .85;
   }
 
   to {
