--- a/css/custom.css
+++ b/css/custom.css
@@ -25,12 +25,14 @@ a.side:hover {
   animation-duration: 1s;
   animation-fill-mode: forwards;
 }
+/*
+.inline-link > a {
+  color: teal;
+}
 
 .inline-link:hover {
-  animation-name: inlin-hov;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
+  color: red;
+}*/
 
 .backstretch {
   background: url(../images/earth.jpeg) no-repeat center center fixed; 
@@ -94,7 +96,7 @@ a.side:hover {
   z-index: 101;
 }
 
-#sb-trans {
+#sidebar-transparent{
   position: relative;
   left: 0px;
   top: -500px;
@@ -162,19 +164,16 @@ div.panel {
   background-color: #201f2a;
   color: #eaeaea;
   font-size: 28px;
-  align-content: left;
-  font-weight: 200px;
+  font-weight: 200;
   overflow-y: scroll;
 }
 
 div.title {
-  font-size: 40px;
-  margin: 10px;
+  font-size: 48px;
 }
 
 div.inner-panel {
   padding: 60px;
-  /*text-align: justify;*/
   line-height: 110%;
 }
 
@@ -183,28 +182,120 @@ div.panel-center {
 }
 
 .headshot {
-  width: 200px;
-  display: inline-block;
-  float: left;
+  width: 100%;
+  object-fit: contain;
   border-radius: 15px;
   opacity: 1;
-  z-index: 999999;
-  margin-right: 50px;
-  margin-bottom: 50px;
+
 }
 
 span.panel-body {
   margin-top: 100px;
   font-family: 'Open Sans', sans-serif;
+  font-weight: 200;
+}
+div.project-body {
+  font-size: 20px;
+  font-weight: 100;
+  font-family: 'Open Sans', sans-serif;
+  /*text-align: left;*/
+}
+
+span.panel-body2 {
+  margin-top: 100px;
+  line-height: 110%;
+  font-size: 34px;
+}
+
+span.project-header {
+  font-family: 'Unica One';
+  font-size: 30px;
+  letter-spacing: 0.15em;
+}
+
+span.skillz-header {
+  font-family: 'Unica One';
+  font-size: 30px;
+  letter-spacing: 0.15em;
+  align-content: center;
+  margin-bottom: 25px;
+  margin-left: -15px;
+}
+
+.skillz-box {
+  font-family: 'Open Sans';
+  font-size: 20px;
+  border: 1px solid;
+  border-color: white;
+  border-radius: 15px;
+  padding: 25px 0px 25px 35px;
+  font-weight: 100;
+  margin-top: 15px;
 }
 
 .project {
-  display: block;
-  margin: 25px 25px;
-  opacity: .75;
-  height: 300px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  opacity: .7;
+  border-radius: 3px;
+  width: 100%;
+  object-fit: contain;
 }
 
 .project:hover {
   opacity: 1;
+}
+
+.project-box {
+  width: 100%;
+  margin-top: 10px;
+}
+
+.project-card {
+  display: inline-block;
+  width: 25%;
+  height: 700px%;
+  padding: 10px;
+  margin: 15px;
+  vertical-align: top;
+}
+
+.project-links {
+  font-size: 75%;
+}
+
+.project-links > a {
+  color: white;
+}
+
+.project-links > a:hover {
+  color: #32B2B2;
+}
+
+p.about-paragraph {
+  margin-bottom: 15px;
+}
+
+.inner-panel-sidebar {
+  width: 25%;
+  float: left;
+}
+
+.inner-panel-text {
+  width: 70%;
+  float: right;
+  font-weight: 100;
+  color: #d9d9d9;
+  font-size: 24px;
+  text-align: justify;
+}
+
+img#gh-link {
+  height: 40px;
+}
+
+.icon-link {
+  align-content: center;
+  text-align: center;
+  margin-bottom: 25px;
 }
