--- a/css/custom.css
+++ b/css/custom.css
@@ -231,6 +231,7 @@ span.skillz-header {
   padding: 25px 0px 25px 35px;
   font-weight: 100;
   margin-top: 15px;
+  overflow-x: scroll;
 }
 
 .project {
