--- a/partials/about.html
+++ b/partials/about.html
@@ -1,6 +1,6 @@
 <div class="inner-panel"> 
   <div class="inner-panel-sidebar">
-    <img src="images/head2.png" class="headshot">
+    <img src="images/head2.jpg" class="headshot">
     <div class="skillz-box">
       <span class="skillz-header">skills:</span>
       <ul>
@@ -15,7 +15,7 @@
         <li>GitHub</li>
         <li>MiniTest/RSpec</li>
         <li>Capybara</li>
-        <li>TDD/BDD</li>
+        <li>TDD</li>
       </ul>
     </div>
   </div>
