content switching stalled

--- a/partials/about.html
+++ b/partials/about.html
@@ -1,5 +1,4 @@
-<div class="inner-panel"> 
-  <div class="inner-panel-sidebar">
+  <div class="inner-panel-sidebar" id="about-inner-panel">
     <img src="images/head2.png" class="headshot">
     <div class="skillz-box">
       <span class="skillz-header">skills:</span>
@@ -43,4 +42,3 @@
       </span>
     </div>
   </div>
-</div>
