--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,4 +1,4 @@
-<div class="inner-panel panel-center">
+<div class="inner-panel panel-center" id="contact-inner-panel">
   <div class='title'>get in touch.
   </div>
   <br>
