--- a/css/custom.css
+++ b/css/custom.css
@@ -1,358 +1,128 @@
-@font-face {
+/*@font-face {
   font-family: 'Unica One';
   src: url('../fonts/unicaone.eof');
   src: local('UnicaOne'), local('UnicaOne'), url('../fonts/unicaone.ttf') format('truetype');
 }
 
+*/
 @font-face {
   font-family: 'Open Sans';
   src: url('../fonts/opensanslight.ttf');
   src: local('OpenSans'), local('OpenSans'), url('../fonts/opensanslight.ttf') format('truetype');
 }
-
 body {
-  font-family: Unica One, sans-serif;
+  font-family: 'OpenSans', sans-serif;
+}
+#panel-content {
 }
 
-a, a:visited {
-  text-decoration: none;
-  color: #1E9E9E;
-}
-
-a.side:hover {
-  text-decoration: none;
-  animation-name: link-hov;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-
-.backstretch {
-  background: url(../images/earth.jpeg) no-repeat center center fixed; 
-  position: fixed; 
-  overflow: hidden; 
-  height: 100%; 
-  width: 100%;
-  z-index: -999999;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-.inner {
+.inner-body {
+  position: absolute;
   height: 100%;
   width: 100%;
-  z-index: 0;
-  position: fixed; 
 }
 
-@keyframes slide-down {
-    from {height: 0%;
-          opacity: .1;
-          z-index: 100;}
-    to {height: 200%;
-        opacity: .08;
-        z-index: -900;}
-}
-
-@keyframes fade-in {
-    from {opacity: 0;}
-    to {opacity: 1;}
-}
-
-@keyframes link-hov {
-    from {  color: #1E9E9E;
-    }
-    to {    color: #32B2B2;
-            font-size: 102%;
-            font-weight: 500;
-    }
-}
-
-@keyframes inlin-hov {
-    from {  color: #1E9E9E;
-    }
-    to {    color: green;
-            font-weight: 500;
-    }
-}
-
-#sidebar {
-  float: left;
-  color: #EAEAEA;
-  text-align: right;
-  width: 200px;
-  height: 100%;
-  margin-left: 80%;
-  opacity: 1;
-  z-index: 101;
-}
-
-#sidebar-transparent{
-  position: relative;
-  left: 0px;
-  top: -500px;
-  background-color: #eaeaea;
-  width: 100%;
-  animation-name: slide-down;
-  animation-delay:0.25s;
-  animation-duration: 5s;
-  animation-fill-mode: forwards;
-}
-
-#title {
-  opacity: 0;
-  font-size: 58px;
-  line-height: 80%;
-  margin-right: 15px;
-  margin-top: 20px;
-  animation-name: fade-in;
-  animation-delay: 1.55s;
-  animation-duration: 1.8s;
-  animation-fill-mode: forwards;
-}
-
-#about {
-  opacity: 0;
-  animation-name: fade-in;
-  animation-delay: 2.05s;
-  animation-duration: 1.5s;
-  animation-fill-mode: forwards;
-}
-
-#code {
-  opacity: 0;
-  animation-name: fade-in;
-  animation-delay: 2.55s;
-  animation-duration: 1.5s;
-  animation-fill-mode: forwards;
-}
-
-#contact {
-  opacity: 0;
-  animation-name: fade-in;
-  animation-timing-function: ease-in;
-  animation-delay: 3.05s;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-.links {
-  float: right;
-  text-decoration: none;
-  color: #009999;
-  line-height: 120%;
-  font-size: 40px;
-  margin: 15px 15px;
-}
-
-div.panel {
-  font-family: Unica One, sans-serif;
-  position: fixed;
+.panel {
   height: 100%;
   width: 80%;
-  z-index: 100000;
-  background-color: #201f2a;
-  color: #eaeaea;
-  font-size: 28px;
-  font-weight: 200;
-  overflow-y: scroll;
-  display: none;
-}
-
-div.title {
-  font-size: 48px;
-}
-
-div.inner-panel {
-  padding: 60px;
-  line-height: 110%;
-}
-
-div.panel-center {
-  text-align: center;
-}
-
-.headshot {
-  width: 100%;
-  object-fit: contain;
-  border-radius: 15px;
-  opacity: 1;
-
-}
-
-span.panel-body {
-  margin-top: 100px;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 200;
-}
-div.project-body {
-  font-size: 20px;
-  font-weight: 100;
-  font-family: 'Open Sans', sans-serif;
-  /*text-align: left;*/
-}
-
-span.panel-body2 {
-  margin-top: 100px;
-  line-height: 110%;
-  font-size: 34px;
-}
-
-span.project-header {
-  font-family: 'Unica One';
-  font-size: 30px;
-  letter-spacing: 0.15em;
-}
-
-span.skillz-header {
-  font-family: 'Unica One';
-  font-size: 30px;
-  letter-spacing: 0.15em;
-  align-content: center;
-  margin-bottom: 25px;
-  margin-left: -15px;
-}
-
-.skillz-box {
-  font-family: 'Open Sans';
-  font-size: 20px;
-  border: 1px solid;
-  border-color: white;
-  border-radius: 15px;
-  padding: 25px 0px 25px 35px;
-  font-weight: 100;
-  margin-top: 15px;
-  overflow-x: scroll;
-}
-
-.project {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  opacity: .7;
-  border-radius: 3px;
-  width: 100%;
-  object-fit: contain;
-}
-
-.project:hover {
-  opacity: 1;
-}
-
-.project-box {
-  width: 100%;
-  margin-top: 10px;
-}
-
-.project-card {
-  display: inline-block;
-  width: 25%;
-  height: 700px;
-  padding: 10px;
-  margin: 15px;
-  vertical-align: top;
-}
-
-.project-links {
-  font-size: 75%;
-}
-
-.project-links > a {
-  color: white;
-}
-
-.project-links > a:hover {
-  color: #32B2B2;
-}
-
-p.about-paragraph {
-  margin-bottom: 15px;
-}
-
-.inner-panel-sidebar {
-  width: 25%;
   float: left;
+  overflow-y: scroll;
+  background-color: lightgray;
 }
 
-.inner-panel-text {
-  width: 70%;
-  float: right;
-  font-weight: 100;
-  color: #d9d9d9;
-  font-size: 24px;
-  text-align: justify;
+.sidebar {
+  height: 100%;
+  width: 20%;
+  float: left;
+  background-color: lightblue;
 }
 
-img#gh-link {
-  height: 40px;
+.sidebar-content {
+  height: 100%;
+  width: 65%;
+  text-align: right;
 }
-
-.icon-link {
-  align-content: center;
-  text-align: center;
-}
-
-.spaced-link {
-  width: 25%;
-  display: inline-block;
-  opacity: .8;
-}
-
-.spaced-link:hover {
-  opacity: 1;
-}
-
-#about-links {
-  margin-top: 50px;
-  margin-bottom: 25px;
-  text-align: center;
-  align-content: center;
-}
-
-@-webkit-keyframes fadeInUpBig {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 2000px, 0);
-    transform: translate3d(0, 2000px, 0);
-  }
-
-  to {
-    opacity: .95;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInUpBig {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 2000px, 0);
-    transform: translate3d(0, 2000px, 0);
-  }
-
-  to {
-    opacity: .95;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-.fadeInUpBig {
-  -webkit-animation-duration: 1s;
+  
+.slideUp {
+  animation-name: slideUp;
   animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-name: fadeInUpBig;
-  animation-name: fadeInUpBig;
+}  
+.slideDown {
+  animation-name: slideDown;
+  animation-duration: 1s;
 }
 
-@-webkit-keyframes fadeOut {
+@-webkit-keyframes slideUp {
   from {
+    transform: translateY(100%);
+    opacity: 0;
+  } to {
+    transform:translateY(0px);
+    opacity: .95;
+  }
+}
+@-moz-keyframes slideUp {
+    from {
+    transform:translateY(100%);
+    opacity: 0;
+  } to {
+    transform:translateY(0px);
     opacity: .95;
   }
 
-  to {
+}
+@-o-keyframes slideUp {
+    from {
+    transform:translateY(100%);
+    opacity: 0;
+  } to {
+    transform:translateY(0px);
+    opacity: .95;
+  }
+}
+@keyframes slideUp {
+    from {
+    transform:translateY(100%);
+    opacity: 0;
+  } to {
+    transform:translateY(0px);
+    opacity: .95;
+  }
+}
+
+@-webkit-keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+    opacity: .95;
+  } to {
+    transform:translateY(0px);
+    opacity: 0;
+  }
+}
+@-moz-keyframes slideDown {
+    from {
+    transform:translateY(-100%);
+    opacity: .95;
+  } to {
+    transform:translateY(0px);
+    opacity: 0;
+  }
+}
+@-o-keyframes slideDown {
+    from {
+    transform:translateY(-100%);
+    opacity: .95;
+  } to {
+    transform:translateY(0px);
+    opacity: 0;
+  }
+}
+@keyframes slideDown {
+    from {
+    transform:translateY(-100%);
+    opacity: .95;
+  } to {
+    transform:translateY(0px);
     opacity: 0;
   }
 }
