--- a/partials/about.html
+++ b/partials/about.html
@@ -1,4 +1,4 @@
-  <div class="inner-panel-sidebar" id="about-inner-panel">
+  <div class="panel-inner" id="panel-inner-contact">
     <img src="images/head2.png" class="headshot">
     <div class="skillz-box">
       <span class="skillz-header">skills:</span>
