--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,22 +1,13 @@
-<div class="inner-panel panel-center" id="contact-inner-panel">
-  <div class='title'>get in touch.
+<div class="panel-inner" id="panel-inner-contact">
+  
+  <div class='panel-title'>get in touch.</div>
+  <div class="email"><a href="mailto:kamiboers@gmail.com">kamiboers@gmail.com</a></div>
+  <div class="phone">303.726.5267</div>
+  
+  <div id="contact-links">
+      <a target="_blank" href="kboers-resume.pdf"><img src="images/resume-icon.png" class="icon"></a>
+      <a target="_blank" href="http://www.github.com/kamiboers"><img src="images/github-icon.png" class="icon"></a>
+      <a target="_blank" href="http://www.linkedin.com/in/kamiboers"><img src="images/linkedin-icon.png" class="icon"></a>
   </div>
-  <br>
-  <span class="panel-body2">
-    <a href="mailto:kamiboers@gmail.com" class="touch">
-      kamiboers@gmail.com
-    </a>
-    <br>303.726.5267<br>
-  </span>
-  <div id="about-links">
-    <span class="icon-link spaced-link"><a target="_blank" href="kboers-resume.pdf">
-      <img src="images/resume-icon.png" height="40px"></a>
-    </span>
-    <span class="icon-link spaced-link"><a target="_blank" href="http://www.github.com/kamiboers">
-      <img src="images/github-icon.png" height="40px"></a>
-    </span>
-    <span class="icon-link spaced-link"><a target="_blank" href="http://www.linkedin.com/in/kamiboers">
-      <img src="images/linkedin-icon.png" height="40px"></a>
-    </span>
-  </div>
+
 </div>
