about panel refactor

--- a/partials/code.html
+++ b/partials/code.html
@@ -1,4 +1,4 @@
-<div class="panel-inner" id="panel-inner-contact">
+<div class="panel-inner" id="panel-inner-code">
   <div class='panel-title'>projects.</div>
   <div class='project-box'> 
     
