--- a/partials/contact.html
+++ b/partials/contact.html
@@ -4,7 +4,7 @@
   <div class="email"><a href="mailto:kamiboers@gmail.com">kamiboers@gmail.com</a></div>
   <div class="phone">303.726.5267</div>
   
-  <div id="contact-links">
+  <div id="links-below-content">
       <a target="_blank" href="kboers-resume.pdf"><img src="images/resume-icon.png" class="icon"></a>
       <a target="_blank" href="http://www.github.com/kamiboers"><img src="images/github-icon.png" class="icon"></a>
       <a target="_blank" href="http://www.linkedin.com/in/kamiboers"><img src="images/linkedin-icon.png" class="icon"></a>
