--- a/css/custom.css
+++ b/css/custom.css
@@ -45,17 +45,24 @@ body {
   float: left;
   overflow-x: hidden;
   overflow-y: scroll;
+  opacity: 0.95;
+}
 
+.panel-inner {
+  height: 100%;
+  width: 100%;
 }
 
 .panel-content {
-  height: 100%;
+  min-height: 100%;
+  height: auto;
   display: none;
   background-color: #13171A;
   opacity: 0.95;
   padding: 25px;
-
+  overflow-y: scroll;
 }
+
 
 .panel-title {
   font-size: 48px;
@@ -93,20 +100,51 @@ body {
 }
 
 
-
 /* about panel content */
 
+.panel-narrow-column {
+  width: 30%;
+  float: left;
+  padding: 15px;
+}
+
+.panel-wide-column {
+  width: 60%;
+  float: right;
+  padding: 25px;
+}
+
 .headshot {
-  width: 25%;
+  width: 100%;
   border-radius: 15px;
   float: left;
+  margin-bottom: 25px;
+}
+
+.panel-sub-title {
+  margin-left: -15px;
+  font-size: 46px;
+  font-family: 'Unica One';
 }
 
 .skillz-box {
-  width: 30%;
+  width: 65%;
   float: left;
   border: 1px solid white;
   border-radius: 15px;
+  margin: 5px;
+  padding: 40px;
+  font-size: 22px;
+  line-height: 140%;
+  overflow-x: scroll;
+}
+
+.about-paragraph {
+  font-size: 24px;
+  font-weight: 100px;
+  font-family: 'Open Sans';
+  margin: 30px 25px;
+  line-height: 125%;
 }
 
 /* code panel content */
@@ -126,8 +164,9 @@ body {
   animation-fill-mode: forwards;
 }
 
-.about-links {
+.links-below-content {
   margin-top: 100px;
+  text-align: center;
 }
 
 .icon {
