--- a/partials/about.html
+++ b/partials/about.html
@@ -1,7 +1,11 @@
-  <div class="panel-inner" id="panel-inner-contact">
+  <div class="panel-inner" id="panel-inner-about">
+
+  <div class='panel-narrow-column'>
+
     <img src="images/head2.png" class="headshot">
+
     <div class="skillz-box">
-      <span class="skillz-header">skills:</span>
+      <span class="panel-sub-title">skills:</span>
       <ul>
         <li>JavaScript</li>
         <li>jQuery</li>
@@ -18,8 +22,9 @@
       </ul>
     </div>
   </div>
-  <div class="inner-panel-text">
-    <span class='panel-body'> 
+
+  <div class="panel-wide-column">
+      
       <p class='about-paragraph'>
         I am a recent graduate of <span class="inline-link"><a target="_blank" href="http://www.turing.io">Turing School of Software and Design</a></span> in Denver, Colorado. Turing's intensive program certifies full stack web developers with experience stretching from Ruby to Rails to JavaScript, HTML, CSS and beyond. 
       </p>
@@ -29,16 +34,11 @@
       <p class='about-paragraph'>
         I am also a traveler, poker fan, rock climber, lover of languages, dog wrangler, and general enthusiast of life.  With a background in veterinary care and extensive customer service experience, I have a knack for quick, flexible and amicable problem solving, and thrive in a team environment. I hope to build a career characterized by continual learning, collaboration and sharing of knowledge with others.
       </p>
-    </span>
-    <div id="about-links">
-      <span class="icon-link spaced-link">
-        <a target="_blank" href="kboers-resume.pdf"><img src="images/resume-icon.png" height="40px"></a>
-      </span>
-      <span class="icon-link spaced-link">
-        <a target="_blank" href="http://www.github.com/kamiboers"><img src="images/github-icon.png" height="40px"></a>
-      </span>
-      <span class="icon-link spaced-link">
-        <a target="_blank" href="http://www.linkedin.com/in/kamiboers"><img src="images/linkedin-icon.png" height="40px"></a>
-      </span>
+    
+    <div class="links-below-content">
+        <a target="_blank" href="kboers-resume.pdf"><img src="images/resume-icon.png" class="icon"></a>
+        <a target="_blank" href="http://www.github.com/kamiboers"><img src="images/github-icon.png" class="icon"></a>
+        <a target="_blank" href="http://www.linkedin.com/in/kamiboers"><img src="images/linkedin-icon.png" class="icon"></a>
     </div>
+
   </div>
