--- a/partials/code.html
+++ b/partials/code.html
@@ -1,85 +1,45 @@
 <div class="panel-inner" id="panel-inner-code">
-  <div class='panel-title'>projects.</div>
-  <div class='project-box'> 
-    
-    <div class='project-card'>
-      <span class='project-header'>Project Header</span>
-      <img src="images/fitbeatstatic.png" id="fitbeat" alt="FitBeat" class="project-image">
-      <div class="project-body">
-        The Dormouse had closed its eyes by this time, and was going off into a doze; but, on being pinched by the Hatter, it woke up again with a little shriek, and went on: '—that begins with an M, such as mouse-traps, and the moon, and memory, and muchness—you know you say things are "much of a muchness"—did you ever see such a thing as a drawing of a muchness?'
-      </div>
-      <span class="project-links">
-        <a target="_blank" href="http://github.com/kamiboers/fitbeat">View on GitHub <img src="images/github-icon.png" width="20px"></a>
-        <a href="#">[ Production Demo coming soon ]</a>
-      </span>
-    </div>
 
-    <div class='project-card'>
-      <span class='project-header'>Q*Bert</span>
-      <img src="images/qbertstatic.png" id="qbert" alt="Q*Bert" class="project">
-      <div class="project-body">
-        This piece of rudeness was more than Alice could bear: she got up in great disgust, and walked off; the Dormouse fell asleep instantly, and neither of the others took the least notice of her going, though she looked back once or twice, half hoping that they would call after her: the last time she saw them, they were trying to put the Dormouse into the teapot.
-      </div>
-      <span class="project-links">       
-        <a target="_blank" href="http://github.com/kamiboers/qbert">View on GitHub <img src="images/github-icon.png" width="20px"></a>
-        <a target="_blank" href="http://qbert.rocks">View in Production</a>
-        </span>
-    </div>
+  <span class="panel-title">projects.</span>
 
-    <div class='project-card'>
-      <span class='project-header'>IdeaBox</span>
-      <img src="images/ideaboxstatic.png" id="ideabox" alt="IdeaBox" class="project">
-      <div class="project-body">
-       A large rose-tree stood near the entrance of the garden: the roses growing on it were white, but there were three gardeners at it, busily painting them red. Alice thought this a very curious thing, and she went nearer to watch them, and just as she came up to them she heard one of them say, 'Look out now, Five! Don't go splashing paint over me like that!'
+  <div class="project-box">
+
+      <div class="project-card">
+        <span class="project-title">FitBeat</span>
+        <img src="./images/fitbeatstatic.png" class="project-image">
+        <div class="project-description"> 
+          A fitness music app consuming Fitbit and Spotify APIs. FitBeat pulls in daily heart rate data, displays it on a dashboard and allows the user to create and populate Spotify playlists whose BPM falls within the ranges of Fitbit's exercise heart rate categories. Uses Ruby on Rails, OAuth2 authorization, jQuery, RSpec, and VCR to test API interaction.
+        </div>
+        <div class="project-links">
+          <a target="_blank" href="http://github.com/kamiboers/fitbeat">View on GitHub</a>
+        </div>
       </div>
-      <span class="project-links">
-        
-        <a target="_blank" href="http://github.com/kamiboers/ideabox">View on GitHub <img src="images/github-icon.png" width="20px"></a>
+
+      <div class="project-card">
+        <span class="project-title">Q*bert</span>
+        <img src="./images/qbertstatic.png" class="project-image">
+        <div class="project-description">
+          Classic arcade game replicated with HTML Canvas and client-side JavaScript during a ten day, three-person collaboration. Tracks local high scores using local storage. Q*Bert also incorporates jQuery, CSS, and unit testing with Minitest, Mocha, and Chai.
+        </div>
+        <div class="project-links">
+          <a target="_blank" href="http://github.com/kamiboers/qbert">View on GitHub</a><br>
+          <a target="_blank" href="http://qbert.rocks">View in Production</a>
+          
+        </div>
+      </div>
+
+      <div class="project-card">
+        <span class="project-title">'IdeaBox'</span>
+        <img src="./images/ideaboxstatic.png" class="project-image">
+        <div class="project-description">
+         Single-page app to store and rate 'ideas'. Uses Rails to manage and serve data and JavaScript/jQuery for client-side interactions. All CRUD functionality is initiated via jQuery AJAX calls to the Rails server. Ideas can be edited inline, filtered by tags, and searched dynamically without page reload. jQuery is responsible for all DOM manipulation.
+       </div>
+       <div class="project-links">
+        <a target="_blank" href="http://github.com/kamiboers/ideabox">View on GitHub</a><br>
         <a target="_blank" href="http://ideaboite.herokuapp.com/">View in Production</a>
-      </span>
-    </div>
-    
-    <div class='project-card'>
-      <span class='project-header'>Project Header</span>
-      <img src="images/fitbeatstatic.png" id="fitbeat" alt="FitBeat" class="project-image">
-      <div class="project-body">
-        The Dormouse had closed its eyes by this time, and was going off into a doze; but, on being pinched by the Hatter, it woke up again with a little shriek, and went on: '—that begins with an M, such as mouse-traps, and the moon, and memory, and muchness—you know you say things are "much of a muchness"—did you ever see such a thing as a drawing of a muchness?'
+        </div>
       </div>
-      <span class="project-links">
-        <a target="_blank" href="http://github.com/kamiboers/fitbeat">View on GitHub <img src="images/github-icon.png" width="20px"></a>
-        <a href="#">[ Production Demo coming soon ]</a>
-      </span>
-    </div>
-
-    <div class='project-card'>
-      <span class='project-header'>Q*Bert</span>
-      <img src="images/qbertstatic.png" id="qbert" alt="Q*Bert" class="project">
-      <div class="project-body">
-        This piece of rudeness was more than Alice could bear: she got up in great disgust, and walked off; the Dormouse fell asleep instantly, and neither of the others took the least notice of her going, though she looked back once or twice, half hoping that they would call after her: the last time she saw them, they were trying to put the Dormouse into the teapot.
-      </div>
-      <span class="project-links">       
-        <a target="_blank" href="http://github.com/kamiboers/qbert">View on GitHub <img src="images/github-icon.png" width="20px"></a>
-        <a target="_blank" href="http://qbert.rocks">View in Production</a>
-        </span>
-    </div>
-
-    <div class='project-card'>
-      <span class='project-header'>IdeaBox</span>
-      <img src="images/ideaboxstatic.png" id="ideabox" alt="IdeaBox" class="project">
-      <div class="project-body">
-       A large rose-tree stood near the entrance of the garden: the roses growing on it were white, but there were three gardeners at it, busily painting them red. Alice thought this a very curious thing, and she went nearer to watch them, and just as she came up to them she heard one of them say, 'Look out now, Five! Don't go splashing paint over me like that!'
-      </div>
-      <span class="project-links">
-        
-        <a target="_blank" href="http://github.com/kamiboers/ideabox">View on GitHub <img src="images/github-icon.png" width="20px"></a>
-        <a target="_blank" href="http://ideaboite.herokuapp.com/">View in Production</a>
-      </span>
-    </div>
 
   </div>
-</div>
-<div class="icon-link">
-  <a target="_blank" href="http://www.github.com/kamiboers">
-    <img src="images/github-icon.png" id="gh-link" alt="go to github">
-  </a>
+
 </div>
