--- a/css/custom.css
+++ b/css/custom.css
@@ -45,7 +45,7 @@ body {
 
 .panel {
   height: 100%;
-  width: 80%;
+  width: 75%;
   float: left;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -78,14 +78,58 @@ body {
 
 .sidebar {
   height: 100%;
-  width: 20%;
+  width: 25%;
   float: left;
 }
 
+.sidebar-transparent{
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: -500px;
+  background-color: #eaeaea;
+  opacity: .1;
+  animation-name: slide-down;
+  animation-delay:0.25s;
+  animation-duration: 5s;
+  animation-fill-mode: forwards; 
+  z-index: 500;
+}
+
 .sidebar-title {
-  font-size: 175%;
+  opacity: 0;
+  font-size: 145%;
   line-height: 80%;
   margin-bottom: 25px;
+  animation-name: fade-in;
+  animation-delay: 1.55s;
+  animation-duration: 1.8s;
+  animation-fill-mode: forwards;
+}
+
+#about {
+  opacity: 0;
+  animation-name: fade-in;
+  animation-delay: 2.05s;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+}
+
+#code {
+  opacity: 0;
+  animation-name: fade-in;
+  animation-delay: 2.55s;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+}
+
+#contact {
+  opacity: 0;
+  animation-name: fade-in;
+  animation-timing-function: ease-in;
+  animation-delay: 3.05s;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 
 .sidebar-link:hover {
@@ -95,13 +139,15 @@ body {
 }
 
 .sidebar-content {
+  position: absolute;
   height: 100%;
-  width: 65%;
+  width: 150px;
   text-align: right;
   font-family: 'Unica One', sans-serif;
   font-size: 40px;
-  padding: 25px 5px;
+  padding: 20px 25px;
   line-height: 115%;
+  z-index: 1000;
 }
 
 /* about panel content */
@@ -310,4 +356,54 @@ body {
             font-size: 102%;
             font-weight: 500;
     }
+}
+
+@keyframes slide-down {
+    from {height: 0%;
+          opacity: .1;
+          z-index: 100;}
+    to {height: 200%;
+        opacity: .08;
+        z-index: -900;}
+}
+@-webkit-keyframes slide-down {
+    from {height: 0%;
+          opacity: .1;
+          z-index: 100;}
+    to {height: 200%;
+        opacity: .08;
+        z-index: -900;}
+}
+@-moz-keyframes slide-down {
+    from {height: 0%;
+          opacity: .1;
+          z-index: 100;}
+    to {height: 200%;
+        opacity: .08;
+        z-index: -900;}
+}
+@-o-keyframes slide-down {
+    from {height: 0%;
+          opacity: .1;
+          z-index: 100;}
+    to {height: 200%;
+        opacity: .08;
+        z-index: -900;}
+}
+
+@keyframes fade-in {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+@-webkit-keyframes fade-in {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+@-moz-keyframes fade-in {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+@-o-keyframes fade-in {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
