--- a/css/custom.css
+++ b/css/custom.css
@@ -30,6 +30,8 @@ body {
   color: #EAEAEA;
 }
 
+@media (min-width: 1100px) and (orientation: landscape) {
+
 .backstretch {
   background: url(../images/earth.jpeg) no-repeat center center fixed; 
   position: fixed; 
@@ -409,4 +411,6 @@ body {
 @-o-keyframes fade-in {
     from {opacity: 0;}
     to {opacity: 1;}
+}
+
 }
